--- a/app/src/main/res/layout/pyramid_item.xml
+++ b/app/src/main/res/layout/pyramid_item.xml
@@ -3,25 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
     <ImageView
         android:id="@+id/pyramidImage"
         android:layout_width="150dp"
         android:layout_height="200dp"/>
+    -->
+
+    <!-- android:layout_toRightOf="@id/pyramidImage" -->
 
     <TextView
         android:id="@+id/pyramidPharaoh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/pyramidImage"
         android:layout_margin="20dp"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/pyramidName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/pyramidImage"
         android:layout_below="@id/pyramidPharaoh"
         android:layout_margin="20dp"
         android:textSize="20sp"/>
@@ -30,7 +32,6 @@
         android:id="@+id/pyramidInformation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/pyramidImage"
         android:layout_below="@id/pyramidName"
         android:layout_margin="20dp"
         android:textSize="20sp"/>
