Italic name of pyramid in list

--- a/app/src/main/res/layout/pyramid_item.xml
+++ b/app/src/main/res/layout/pyramid_item.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/pyramidPharaoh"
         android:layout_margin="20dp"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/pyramidInformation"
